--- a/Geofence/Base.lproj/Main.storyboard
+++ b/Geofence/Base.lproj/Main.storyboard
@@ -25,11 +25,8 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ccn-fZ-ccF">
-                                        <rect key="frame" x="376" y="14" width="18" height="22"/>
-                                        <state key="normal" image="plus" catalog="system"/>
-                                        <connections>
-                                            <action selector="changeRegion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ayQ-He-Im5"/>
-                                        </connections>
+                                        <rect key="frame" x="375" y="14" width="19" height="22"/>
+                                        <state key="normal" image="ellipsis" catalog="system"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SIT-e7-0v7" userLabel="Remove Geofence">
                                         <rect key="frame" x="20" y="14" width="18" height="22"/>
@@ -58,14 +55,24 @@
                                     <outletCollection property="gestureRecognizers" destination="PHM-wo-J5i" appends="YES" id="u1F-3u-oLb"/>
                                 </connections>
                             </mapView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hun-FK-ycB">
+                                <rect key="frame" x="264" y="94" width="150" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="GnY-b6-lMQ"/>
+                                    <constraint firstAttribute="height" constant="100" id="Pn1-Tm-TsP"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="vLE-Mh-rfE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DIF-rk-zoY"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vLE-Mh-rfE" secondAttribute="bottom" id="GKO-jm-tdK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vLE-Mh-rfE" secondAttribute="trailing" id="JjB-tk-Tdg"/>
+                            <constraint firstItem="Hun-FK-ycB" firstAttribute="top" secondItem="7im-4u-NRj" secondAttribute="bottom" id="OhX-be-Hky"/>
                             <constraint firstItem="7im-4u-NRj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xut-IH-nxF"/>
                             <constraint firstItem="vLE-Mh-rfE" firstAttribute="top" secondItem="7im-4u-NRj" secondAttribute="bottom" id="dEn-yh-Ciy"/>
+                            <constraint firstItem="Hun-FK-ycB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="kcy-On-7m6"/>
                             <constraint firstItem="7im-4u-NRj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="uCd-xd-Oy1"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7im-4u-NRj" secondAttribute="trailing" id="v2k-fG-z5z"/>
                         </constraints>
@@ -73,6 +80,7 @@
                     </view>
                     <connections>
                         <outlet property="changeRegion" destination="Ccn-fZ-ccF" id="dtg-uv-Crq"/>
+                        <outlet property="dropdownMenuView" destination="Hun-FK-ycB" id="eHi-Mz-Lku"/>
                         <outlet property="mapView" destination="vLE-Mh-rfE" id="p56-7H-S6x"/>
                         <outlet property="removeGeo" destination="SIT-e7-0v7" id="8Zi-pn-BN3"/>
                         <outlet property="statusLabel" destination="xIt-p4-tJp" id="Icw-6H-nhi"/>
@@ -149,7 +157,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="minus" catalog="system" width="128" height="24"/>
-        <image name="plus" catalog="system" width="128" height="113"/>
     </resources>
 </document>
