--- a/Geofence/Base.lproj/Main.storyboard
+++ b/Geofence/Base.lproj/Main.storyboard
@@ -29,8 +29,11 @@
                                         <state key="normal" image="ellipsis" catalog="system"/>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SIT-e7-0v7" userLabel="Remove Geofence">
-                                        <rect key="frame" x="20" y="14" width="18" height="22"/>
-                                        <state key="normal" image="minus" catalog="system"/>
+                                        <rect key="frame" x="20" y="11.5" width="30" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <state key="normal" title="Clear">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="removeGeo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4O5-zi-q3V"/>
                                         </connections>
@@ -158,6 +161,5 @@
     </scenes>
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
-        <image name="minus" catalog="system" width="128" height="24"/>
     </resources>
 </document>
